# gq_mcp

./: .gitignore  .gitmodules  CMakeLists.txt
mcp/: .gitignore  CMakeLists.txt  DEPLOY.txt  MCP协议完整学习指南.md  MCP实现与学习笔记.md
mcp/src/: learn_mcp_server.cpp
